Source/WebCore: box-shadow creates incorrect shadow when border-radius is too large https://bugs.webkit.org/show_bug.cgi?id=72103

Patch by Takashi Sakamoto <tasak@google.com> on 2012-08-10
Reviewed by Simon Fraser.

Added a code for adjusting a rounded rect before paintBoxShadow in
a similar way to getRoundedRectFor.

Test: fast/borders/border-shadow-large-radius.html

* platform/graphics/RoundedRect.cpp:
(WebCore::RoundedRect::adjustRadii):
Added a new method to set radii's scale to fit into rect.
* platform/graphics/RoundedRect.h:
(RoundedRect):
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintBoxShadow):
A rounded rect for box-shadow is not checked whether the raii matches
the rect or not. Added the code to adjust radii's scale if the rounded
rect is not renderable, the case: RoundedRect::isRenderable is false.

LayoutTests: box-shadow creates incorrect shadow when border-radius is too large.
https://bugs.webkit.org/show_bug.cgi?id=72103

Patch by Takashi Sakamoto <tasak@google.com> on 2012-08-10
Reviewed by Simon Fraser.

* fast/borders/border-shadow-large-radius.html: Added.
* fast/borders/border-shadow-large-radius-expected.txt: Added.
* platform/chromium-linux/fast/borders/border-shadow-large-radius-expected.png: Added.
* platform/chromium-mac/fast/borders/border-shadow-large-radius-expected.png: Added.

Canonical link: https://commits.webkit.org/111588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125304 268f45cc-cd09-0410-ab3c-d52691b4dbfc